correct text alignment of the place field in the table.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,6 +49,7 @@ td.date-field {
 }
 td.place-field {
     min-width: 260px;
+    text-align: right;
 }
 th, td {
     padding: 5px;
